docs: more routes documented
