# confSwagger.json
@@ -118,8 +118,7 @@
             },
             "status": {
               "type": "string",
-              "pattern":
-              "^(open|sent|approved|rejected|paid|canceled|delivered)$",
+              "pattern": "^(open|sent|approved|rejected|paid|canceled|delivered)$",
               "description": "Cart status"
             },
             "locale": {
@@ -299,6 +298,64 @@
               "description": "Food plate cook time"
             }
           }
+        },
+        "Customer": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "number",
+              "description": "User id"
+            },
+            "name": {
+              "type": "string",
+              "description": "User name"
+            },
+            "email": {
+              "type": "string",
+              "format": "email",
+              "description": "User email"
+            },
+            "password": {
+              "type": "string",
+              "format": "password",
+              "description": "User hashed password"
+            },
+            "gender": {
+              "type": "string",
+              "pattern": "^(female|male|other|preferNotToSay)$",
+              "description": "User gender"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "date-time",
+              "description": "User creation date"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "date-time",
+              "description": "User update date"
+            },
+            "deletedAt": {
+              "type": "string",
+              "format": "date-time",
+              "description": "User deletion date"
+            }
+          }
+        },
+        "CustomerSignInBodySchema": {
+          "type": "object",
+          "properties": {
+            "email": {
+              "type": "string",
+              "format": "email",
+              "description": "User email"
+            },
+            "password": {
+              "type": "string",
+              "format": "password",
+              "description": "User password"
+            }
+          }
         }
       },
       "securitySchemes": {
@@ -310,7 +367,9 @@
       }
     }
   },
-  "apis": ["**/*.ts"],
+  "apis": [
+    "**/*.ts"
+  ],
   "tags": [],
   "openapi": "3.0.0",
   "paths": {}
